<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Description post menu</string>
    <string name="like_icon" translatable="false">Like icon</string>
    <string name="like_count" translatable="false">10</string>
    <string name="share_count" translatable="false">5</string>
    <string name="view_count" translatable="false">5</string>
    <string name="share_icon" translatable="false">Share Icon</string>
    <string name="view_icon" translatable="false">View Icon</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Content</string>
    <string name="error_empty_content">The content cannot be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_post">Edit Message</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="chooser_share_post">Share</string>
    <string name="play">Play</string>
    <string name="description_video_thumbnail" translatable="false">Video placeholder</string>
    <string name="no_app_to_open">No app to open link</string>
    <string name="empty_posts">No Post</string>
    <string name="add_post">Add post</string>
    <string name="error_loading">Network error</string>
    <string name="retry">Retry</string>
    <string name="enter_post_content">Enter post content…</string>
    <string name="empty_post_warning">Post cannot be empty</string>
    <string name="description_post_attachment">Image attachment</string>
    <string name="show_new_posts">Show new posts (%1$d)</string>
    <string name="Remove">Remove</string>
    <string name="image_pick_error" >Image Pick Error</string>
    <string name="logout" >Log Out</string>
    <string name="sign_in" >Sign In</string>
    <string name="sign_up" >Sign Up</string>
    <string name="logout_confirm_while_editing">Do you really want to leave? The unsaved recording will be lost.</string>
    <string name="auth_required_title">Authorization is required</string>
    <string name="auth_required_message">To perform this action, log in to your account.</string>
    <string name="logout_confirm">Do you really want to get out?</string>

</resources>
